k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-api
spec:
  selector:
    app: cats-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8765
